# pyxgboost

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
pyxgboost/: __init__.py  __main__.py  compiler.py  kaitaiParseBase.py  setuptoolsHelper.py  validator.py
pyxgboost/kaitai/: f4_arr.py  linear_booster.py  pas_str.py  str_arr.py  str_pair.py  str_pair_arr.py  tree_booster.py  xgboost.py
tests/: tests.py
