[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxgboost"
authors = [{name = "KOLANICH"}]
description = "A tool for compiling XGBoost models into python source for using without xgboost"
readme = "ReadMe.md"
keywords = ["machine learning", "decision tree", "xgboost", "gradient boosted tree", "compiler"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://codeberg.org/KOLANICH-ML/pyxgboost"}
dependencies = [
	"plumbum", # @ git+https://github.com/tomerfiliba/plumbum.git#egg=plumbum
	"kaitaistruct", # @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git#egg=kaitaistruct
	"alternativez", # @ git+https://gitlab.com/KOLANICH/alternativez.py.git#egg=alternativez
]
dynamic = ["version"]

[project.optional-dependencies]
"serializing-ast" = [ # any of
	"astor", # @ git+https://github.com/berkerpeksag/astor.git
	"codegen", # @ git+https://github.com/andreif/codegen.git
	"astunparse", # @ git+https://github.com/simonpercivall/astunparse.git
	"astmonkey", # @ git+https://github.com/mutpy/astmonkey.git
]

[project.entry-points."distutils.setup_keywords"]
pyxgboost = "pyxgboost.setuptoolsHelper:pyxgboostHelper"

[project.scripts]
pyxgboost = "pyxgboost.__main__:PyXGBoostCLI.run"

[tool.setuptools]
zip-safe = true
packages = ["pyxgboost", "pyxgboost.kaitai"]
include-package-data = true

[tool.setuptools_scm]

[tool.kaitai]
outputDir = "pyxgboost/kaitai"

[tool.kaitai.repos."https://codeberg.org/KOLANICH-specs/kaitai_struct_formats.git"."xgboost"]
update = true
localPath = "kaitai_struct_formats"

[tool.kaitai.repos."https://codeberg.org/KOLANICH-specs/kaitai_struct_formats.git"."xgboost".formats.xgboost]
path = "scientific/data_science/dmlc/xgboost/xgboost.ksy"
